--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,18 +5,6 @@ font-family: 'Poppins', sans-serif; */
   --branding-color: #cddef8;
 }
 
-h2 {
-  font-family: "Playfair Display", serif;
-  font-weight: bold;
-  font-size: 85px;
-}
-
-h3 {
-  font-family: "Poppins", sans-serif;
-  font-weight: 200;
-  font-size: 28px;
-}
-
 .hero {
   background-color: #fbfcfe;
   text-align: center;
@@ -24,13 +12,81 @@ h3 {
   padding: 160px 20px;
 }
 
+.hero h2 {
+  font-family: "Playfair Display", serif;
+  font-weight: bold;
+  font-size: 85px;
+  line-height: 110px;
+}
+
+.hero h3 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-size: 28px;
+  line-height: 40px;
+}
+
+h2 {
+  font-family: "Playfair Display", serif;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 40px;
+}
+
+p {
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+
 .btn-branding {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
+  letter-spacing: 0.08ch;
   background: var(--branding-color);
   border-radius: 2px;
   color: #021c3a;
   font-size: 16px;
   line-height: 28px;
   padding: 15px 30px;
+}
+
+.btn-branding-outline {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.08ch;
+  background: white;
+  border-radius: 2px;
+  border: solid;
+  border-color: #021c3a;
+  border-width: 3px;
+  color: #021c3a;
+  font-size: 16px;
+  line-height: 28px;
+  padding: 15px 30px;
+}
+
+.project-description {
+  padding: 0px 30px;
+}
+
+@media (max-width: 1000px) {
+  .hero {
+    padding: 80px 20px;
+  }
+
+  .hero h2 {
+    font-size: 50px;
+    line-height: 1.1;
+  }
+  .hero h3 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-size: 22px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
